--- a/cabecalhoerodape.html
+++ b/cabecalhoerodape.html
@@ -27,13 +27,13 @@
             <nav>
                 <div class="menu-centro">
                     <ul class="menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Quem somos</a></li>
-                        <li><a href="#">ONGs</a></li>
-                        <li><a href="#">Ranking</a></li>
-                        <li><a href="#">Categorias</a></li>
-                        <li><a href="#">Perfil</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#" title="Smart sale home">Home</a></li>
+                        <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
+                        <li><a href="#" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="#" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="#" title="Smart sale categorias">Categorias</a></li>
+                        <li><a href="#" title="Smart sale perfil">Perfil</a></li>
+                        <li><a href="#" title="Smart sale faq">FAQ</a></li>
                     </ul>
                 </div>
             </nav>
