update pagina do produto

--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Página do Produto - Smart Sale</title>
         <link rel="stylesheet" href="">
     </head>
     <body>
@@ -14,11 +14,16 @@
         <main>
             <div>
                 <section>
-                    
+                    <img src="./img/Agrupar 61.jpg" alt="Imagem do Feijão Carioca Tipo 1">
                 </section>
                 <section>
                     <p>Feijão Carioca Tipo 1 - 1Kg</p>
                     <p>R$5,00</p>
+                    <p>R$ 1.199,00 em até 12x de R$ 99,91 s/ juros com Ame e receba R$ 47,96 (4% de volta) <br>
+                        R$ 1.199,00 no boleto bancário <br>
+                        R$ 1.199,00 no cartão de crédito em até 10x de R$ 119,90 s/ juros <br>
+                        R$ 1.055,12 no cartão Americanas.com em até 24x de R$ 43,96 s/ juros (12% de desconto)</p>
+                    <p>Quantidade</p>    
                 </section>
             </div>
         </main>
