Update da paginaProduto

--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -5,30 +5,164 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Página do Produto - Smart Sale</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <header>
-
+            <div class="container">
+                <div class="ca">
+                    <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
+                    <label>
+                        <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                            aria-label="Faça uma busca" name="search">
+                    </label>
+                    <div class="botao-login">
+                        <a href="#"><img src="img/avatar.png" alt="Link para fazer login" id="entrar">
+                            <p>Entrar</p>
+                        </a>
+                    </div>
+                </div>
+                <nav>
+                    <div class="menu-centro">
+                        <ul class="menu">
+                            <li><a href="#" title="Smart sale home">Home</a></li>
+                            <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
+                            <li><a href="#" title="Smart sale ongs">ONGs</a></li>
+                            <li><a href="#" title="Smart sale ranking">Ranking</a></li>
+                            <li><a href="#" title="Smart sale categorias">Categorias</a></li>
+                            <li><a href="#" title="Smart sale perfil">Perfil</a></li>
+                            <li><a href="#" title="Smart sale faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </header>
         <main>
-            <div>
-                <section>
-                    <img src="./img/Agrupar 61.jpg" alt="Imagem do Feijão Carioca Tipo 1">
-                </section>
-                <section>
+            <section class="produto">
+                <div class="esquerdo">
+                    <div>
+                        <img src="./img/Agrupar 61.jpg" alt="Imagem do Feijão Carioca Tipo 1" class="imagem-produto">
+                    </div>
+                </div>
+                <div class="direito">
                     <p>Feijão Carioca Tipo 1 - 1Kg</p>
                     <p>R$5,00</p>
                     <p>R$ 1.199,00 em até 12x de R$ 99,91 s/ juros com Ame e receba R$ 47,96 (4% de volta) <br>
                         R$ 1.199,00 no boleto bancário <br>
                         R$ 1.199,00 no cartão de crédito em até 10x de R$ 119,90 s/ juros <br>
                         R$ 1.055,12 no cartão Americanas.com em até 24x de R$ 43,96 s/ juros (12% de desconto)</p>
-                    <p>Quantidade</p>    
-                </section>
-            </div>
+                    <p>Quantidade</p>
+                    <input type="number" name="quantidade" id="">
+                    <div class="botoes">
+                        <a href="#">Reservar</a>
+                        <a href="#">Comprar</a>
+                    </div>  
+                </div>
+            </section>
+            <section class="outrosProdutos">
+                <p>Produtos Relacionados</p>
+                <div class="produtos">
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <p>Feijão Codil</p>
+                            <p>R$ 10,00</p>
+                            <p>X Unidades Disponíveis</p>
+                            <p>Campos Elíseos - São Paulo</p>
+                            <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <p>Feijão Codil</p>
+                            <p>R$ 10,00</p>
+                            <p>X Unidades Disponíveis</p>
+                            <p>Campos Elíseos - São Paulo</p>
+                            <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <p>Feijão Codil</p>
+                            <p>R$ 10,00</p>
+                            <p>X Unidades Disponíveis</p>
+                            <p>Campos Elíseos - São Paulo</p>
+                            <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <p>Feijão Codil</p>
+                            <p>R$ 10,00</p>
+                            <p>X Unidades Disponíveis</p>
+                            <p>Campos Elíseos - São Paulo</p>
+                            <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <p>Feijão Codil</p>
+                            <p>R$ 10,00</p>
+                            <p>X Unidades Disponíveis</p>
+                            <p>Campos Elíseos - São Paulo</p>
+                            <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                                <img src="./img/download.jpg" alt="Feijão A">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                                <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                                <img src="./img/download.jpg" alt="Feijão A">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                                <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                                <img src="./img/download.jpg" alt="Feijão A">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                                <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                                <img src="./img/download.jpg" alt="Feijão A">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                                <a href="#" class="btn">Reserve</a>
+                        </div>
+                        <div class="cardProduto">
+                                <img src="./img/download.jpg" alt="Feijão A">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                                <a href="#" class="btn">Reserve</a>
+                        </div>
+                </div>
+            </section>
         </main>
         <footer>
-
+            <p>SMART SALE ©2019</p>
         </footer>
     </body>
 </html>
