home.v1.3 with css

--- a/home.html
+++ b/home.html
@@ -11,16 +11,42 @@
 
 <body>
     <header>
-        <nav></nav>
+        <div class="cnjt">
+            <div class="ca">
+                <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
+                <label>
+                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                        aria-label="Faça uma busca" name="search">
+                </label>
+                <div class="botao-login">
+                    <a href="#"><img src="img/avatar.png" alt="Link para fazer login" id="entrar">
+                        <p>Entrar</p>
+                    </a>
+                </div>
+            </div>
+            <nav>
+                <div class="menu-centro">
+                    <ul class="menu">
+                        <li><a href="#" title="Smart sale home">Home</a></li>
+                        <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
+                        <li><a href="#" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="#" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="#" title="Smart sale categorias">Categorias</a></li>
+                        <li><a href="#" title="Smart sale perfil">Perfil</a></li>
+                        <li><a href="#" title="Smart sale faq">FAQ</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
 
-        <div class="banner"></div>
-        <div class="meio">
+        <div class="banner-home"></div>
+        <div class="meio-home">
             <div class="whitebox">
-                <div class="container">
+                <div class="cnjt">
                     <div>
-                        <img src="./imagens/img5.png" alt="Mãe cozinhando com a filha pequena" class="img">
+                        <img src="./img/img5.png" alt="Mãe cozinhando com a filha pequena" class="img-1">
                     </div>
                     <div>
                         <h3>Objetivo</h3>
@@ -42,19 +68,19 @@
         <div class="offer">
             <div class="card">
                 <h3>Cereais</h3>
-                <img src="./imagens/img1.png" alt="">
+                <img src="./img/img1.png" alt="">
             </div>
             <div class="card">
                 <h3>Legumes</h3>
-                <img src="./imagens/img2.png" alt="">
+                <img src="./img/img2.png" alt="">
             </div>
             <div class="card">
                 <h3>Carnes</h3>
-                <img src="./imagens/img3.png" alt="">
+                <img src="./img/img3.png" alt="">
             </div>
             <div class="card">
                 <h3>Vegetais</h3>
-                <img src="./imagens/6.png" alt="">
+                <img src="./img/6.png" alt="">
             </div>
         </div>
     </main>
