--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -45,17 +45,19 @@
                     </div>
                 </div>
                 <div class="direito">
-                    <p>Feijão Carioca Tipo 1 - 1Kg</p>
-                    <p>R$5,00</p>
-                    <p>R$ 1.199,00 em até 12x de R$ 99,91 s/ juros com Ame e receba R$ 47,96 (4% de volta) <br>
-                        R$ 1.199,00 no boleto bancário <br>
-                        R$ 1.199,00 no cartão de crédito em até 10x de R$ 119,90 s/ juros <br>
-                        R$ 1.055,12 no cartão Americanas.com em até 24x de R$ 43,96 s/ juros (12% de desconto)</p>
-                    <p>Quantidade</p>
-                    <input type="number" name="quantidade" id="">
-                    <div class="botoes">
-                        <a href="#">Reservar</a>
-                        <a href="#">Comprar</a>
+                    <div>
+                        <p class="nomeProduto">Feijão Carioca Tipo 1 - 1Kg</p>
+                        <p class="precoProduto">R$5,00</p>
+                    </div>
+                    <div>
+                        <div>
+                            <label>Quantidade</label>
+                            <input type="number" name="quantidade" id="">                        
+                        </div>
+                        <div class="botoes">
+                            <a href="#">Reservar</a>
+                            <a href="#">Comprar</a>
+                        </div>
                     </div>  
                 </div>
             </section>
@@ -79,85 +81,85 @@
                         <a href="#" class="btn">Reserve</a>
                     </div>
                     <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                            <a href="#" class="btn">Reserve</a>
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
                     </div>
                     <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                            <a href="#" class="btn">Reserve</a>
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
                     </div>
                     <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                            <a href="#" class="btn">Reserve</a>
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
                     </div>
                     <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                                <img src="./img/download.jpg" alt="Feijão A">
-                                <p>Feijão Codil</p>
-                                <p>R$ 10,00</p>
-                                <p>X Unidades Disponíveis</p>
-                                <p>Campos Elíseos - São Paulo</p>
-                                <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                                <img src="./img/download.jpg" alt="Feijão A">
-                                <p>Feijão Codil</p>
-                                <p>R$ 10,00</p>
-                                <p>X Unidades Disponíveis</p>
-                                <p>Campos Elíseos - São Paulo</p>
-                                <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                                <img src="./img/download.jpg" alt="Feijão A">
-                                <p>Feijão Codil</p>
-                                <p>R$ 10,00</p>
-                                <p>X Unidades Disponíveis</p>
-                                <p>Campos Elíseos - São Paulo</p>
-                                <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                                <img src="./img/download.jpg" alt="Feijão A">
-                                <p>Feijão Codil</p>
-                                <p>R$ 10,00</p>
-                                <p>X Unidades Disponíveis</p>
-                                <p>Campos Elíseos - São Paulo</p>
-                                <a href="#" class="btn">Reserve</a>
-                        </div>
-                        <div class="cardProduto">
-                                <img src="./img/download.jpg" alt="Feijão A">
-                                <p>Feijão Codil</p>
-                                <p>R$ 10,00</p>
-                                <p>X Unidades Disponíveis</p>
-                                <p>Campos Elíseos - São Paulo</p>
-                                <a href="#" class="btn">Reserve</a>
-                        </div>
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
+                    <div class="cardProduto">
+                        <img src="./img/download.jpg" alt="Feijão A">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
             </section>
         </main>
