--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         </div>
-        <div class="offer">
+        <div class="container">
             <div class="card">
                 <h3>Cereais</h3>
                 <img src="./img/img1.png" alt="">
