css integrado home

--- a/home.html
+++ b/home.html
@@ -2,6 +2,54 @@
 <html lang="pt-br">
 
 <head>
+    <style>
+        .cnjt {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.cnjt p {
+    width: 570px;
+    height: 250px;
+}
+
+.cnjt h3 {
+    padding: 0px 0px 50px;
+}
+
+.cnjt p{
+    text-align: justify;
+    align-items: center;
+}
+.meio-home {
+    position: relative;
+    bottom: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.whitebox {
+    border-radius: 5px;
+    width: 1160px;
+    height: 350px;
+    background-color: white;
+    padding: 20px
+}
+
+.banner-home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/img4.png);
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.img-1 {
+    width: 570px;
+    border-radius: 5px;
+}
+
+</style>
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +59,7 @@
 
 <body>
     <header>
-        <div class="cnjt">
+        <div class="container">
             <div class="ca">
                 <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
                 <label>
