--- a/home.html
+++ b/home.html
@@ -1,57 +1,198 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <style>
+        :root {
+            --roxo: #a200cb;
+            --grafite: #707070;
+            --laranja: #ffbd19;
+            --verde: #14cc8a;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            height: 130px;
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            background-color: #A200CB;
+        }
+
+        .container {
+            width: 1200px;
+            margin: auto;
+        }
+
+        .container img {
+            height: 95px;
+            width: 204px;
+        }
+
+        .container input {
+            width: 605px;
+            height: 35px;
+            margin-left: -120px;
+        }
+
+        .menu-centro {
+            display: flex;
+            justify-content: center;
+        }
+
+        main {
+            background-color: #ebebeb;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .containercard {
+            margin: auto;
+            width: 1170px;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            padding: 0 0 50px;
+        }
+
+        .card {
+            width: 250px;
+            line-height: 2.0;
+            margin-top: 30px;
+        }
+
+        .card img{
+            width: 250px;
+        }
+
         .cnjt {
-    display: flex;
-    justify-content: space-between;
+            display: flex;
+            justify-content: space-between;
 
-}
+        }
 
-.cnjt p {
-    width: 570px;
-    height: 250px;
-}
+        .cnjt p {
+            width: 570px;
+            height: 250px;
+        }
 
-.cnjt h3 {
-    padding: 0px 0px 50px;
-}
+        .cnjt h3 {
+            padding: 0px 0px 50px;
+        }
 
-.cnjt p{
-    text-align: justify;
-    align-items: center;
-}
-.meio-home {
-    position: relative;
-    bottom: 200px;
-    display: flex;
-    justify-content: center;
-}
+        .cnjt p {
+            text-align: justify;
+            align-items: center;
+        }
 
-.whitebox {
-    border-radius: 5px;
-    width: 1160px;
-    height: 350px;
-    background-color: white;
-    padding: 20px
-}
+        .meio-home {
+            position: relative;
+            bottom: 200px;
+            display: flex;
+            justify-content: center;
+            margin-bottom: -180px;
+        }
 
-.banner-home {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/img4.png);
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+        .whitebox {
+            border-radius: 5px;
+            width: 1160px;
+            height: 350px;
+            background-color: white;
+            padding: 20px
+        }
 
-.img-1 {
-    width: 570px;
-    border-radius: 5px;
-}
+        .banner-home {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./img/img4.png);
+            height: 300px;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
 
-</style>
-    <link rel="stylesheet" href="./css/style.css">
-    <meta charset="UTF-8">
+        .img-1 {
+            width: 570px;
+            border-radius: 5px;
+        }
+
+        .menu {
+            list-style: none;
+            display: flex;
+            justify-content: space-between;
+            width: 600px;
+            align-items: center;
+            font-size: 12px;
+        }
+
+        .menu a {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: white;
+        }
+
+        .menu-centro {
+            display: flex;
+            justify-content: center;
+        }
+
+        .ca {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .ca a {
+            text-decoration: none;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .botao-login {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        #entrar {
+            width: 30px;
+            height: 35px;
+            margin: 10px;
+        }
+
+        .menu {
+            list-style: none;
+            display: flex;
+            justify-content: space-between;
+            width: 600px;
+            align-items: center;
+            font-size: 12px;
+        }
+
+        .menu a {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: white;
+        }
+
+        footer {
+            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
+            color: white;
+            font-size: 18px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+    <link rel="stylesheet" href=".>
+    <meta charset=" UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home - Smart Sale</title>
@@ -113,7 +254,7 @@
             </div>
         </div>
         </div>
-        <div class="container">
+        <div class="containercard">
             <div class="card">
                 <h3>Cereais</h3>
                 <img src="./img/img1.png" alt="">
@@ -128,10 +269,13 @@
             </div>
             <div class="card">
                 <h3>Vegetais</h3>
-                <img src="./img/6.png" alt="">
+                <img src="./img/img6.png" alt="">
             </div>
         </div>
     </main>
+    <footer>
+        <p>SMART SALE ©2019</p>
+    </footer>
 </body>
 
 </html>
