Página Cadastro e Login adicionada

--- a/cadastrodeproduto.html
+++ b/cadastrodeproduto.html
@@ -23,7 +23,7 @@
         }
 
         main {
-            background-image: url(../img/bannerpho.png);
+            background-image: url(img/bannerpho.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
