pagina de perfil concluida

--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -16,23 +16,25 @@
 
     <main>
         <h1>Final da Reserva</h1>
-            <div class="container">
-        <section class="esquerdo">
-            <div class="texto">
-                <h3>Seu produto foi reservado com sucesso!</h3>
-            </div>
+        <div class="container">
+            <div>
+            <section class="esquerdo">
+                <div class="texto">
+                    <h3>Seu produto foi reservado com sucesso!</h3>
+                </div>
 
-            <div class="textos2">
-                <p>Detalhes da Reserva</p>
-                <P>Data de entrega</P>
-                <p>Quantidade</p>
-            </div>
-        </section>
-        <section class="direito">
-            <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
+                <div class="textos2">
+                    <p>Detalhes da Reserva</p>
+                    <P>Data de entrega</P>
+                    <p>Quantidade</p>
+                </div>
+            </section>
+            <section class="direito">
+                <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
 
-        </section>
-    </div>
+            </section>
+            </div>
+        </div>
     </main>
 
     <footer>
