--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -5,232 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Página do Produto - Smart Sale</title>
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <style>
-        :root {
-            --roxo: #a200cb;
-            --grafite: #707070;
-            --laranja: #ffbd19;
-            --verde: #14cc8a;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
-
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /* paginaProduto */
-        /* Verificar .container  */
-        main {
-            background-color: #ebebeb;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            padding-top: 50px;
-            padding-bottom: 50px;
-        }
-
-        .produto {
-            background-color: #fff;
-            width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .esquerdo {
-            /* background-color: white; */
-            /* height: 800px; */
-            width: 45%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .esquerdo .imagem-produto {
-            width: 550px;
-            height: 550px;
-        }
-
-        .direito {
-            /* background-color: white; */
-            width: 45%;
-            display: flex;
-            justify-content: space-around;
-            align-items: flex-start;
-            flex-direction: column;
-        }
-
-        .direito .nomeProduto {
-            font-size: 2.0em;
-            font-weight: bold;
-            color: var(--grafite);
-        }
-
-        .direito .precoProduto {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: var(--verde);
-        }
-
-        .botoes {
-            width: 500px;
-        }
-
-        .botoes a {
-            padding: 5% 15%;
-            margin: 5% 5%;
-            background-color: var(--roxo);
-        }
-
-        .outrosProdutos {
-            background-color: #fff;
-            width: 1200px;
-            margin: auto;
-            margin-top: 50px;
-        }
-
-        .outrosProdutos .produtos {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-
-        .cardProduto {
-            margin: 20px 20px;
-        }
-
-        /* home */
-
-        .cnjt {
-            display: flex;
-            justify-content: space-between;
-
-        }
-
-        .cnjt p {
-            width: 570px;
-            height: 250px;
-        }
-
-        .cnjt h3 {
-            padding: 0px 0px 50px;
-        }
-
-        .cnjt p {
-            text-align: justify;
-            align-items: center;
-        }
-
-        .meio-home {
-            position: relative;
-            bottom: 200px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .whitebox {
-            border-radius: 5px;
-            width: 1150px;
-            height: 350px;
-            background-color: white;
-            padding: 20px
-        }
-
-        .banner-home {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../imagens/img4.png);
-            height: 300px;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .img-1 {
-            width: 570px;
-            border-radius: 5px;
-        }
-    </style>
+    <title> Página do Produto - Smart Sale</title>
+    <link rel="stylesheet" href="./css/estilo.css">    
 </head>
 
 <body>
@@ -275,116 +51,116 @@
                     <p class="nomeProduto">Feijão Carioca Tipo 1 - 1Kg</p>
                     <p class="precoProduto">R$5,00</p>
                 </div>
-                <div>
-                    <div>
+                <div class="contQuantBotoes">
+                    <div class="quantidade">
                         <label>Quantidade</label>
                         <input type="number" name="quantidade" id="">
-                    </div>
+                    </div>                    
                     <div class="botoes">
-                        <a href="#">Reservar</a>
-                        <a href="#">Comprar</a>
-                    </div>
+                        <a class="botaoReservar" href="#" >Reservar</a>
+                        <a class="botaoComprar" href="#">Comprar</a>
+                    </div>                   
                 </div>
             </div>
         </section>
         <section class="outrosProdutos">
-            <p>Produtos Relacionados</p>
+            <p class="relacionados">Produtos Relacionados</p>
             <div class="produtos">
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
                 <div class="cardProduto">
                     <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
-                </div>
-                <div class="cardProduto">
-                    <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
-                </div>
-                <div class="cardProduto">
-                    <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
-                </div>
-                <div class="cardProduto">
-                    <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
-                </div>
-                <div class="cardProduto">
-                    <img src="./img/download.jpg" alt="Feijão A">
-                    <p>Feijão Codil</p>
-                    <p>R$ 10,00</p>
-                    <p>X Unidades Disponíveis</p>
-                    <p>Campos Elíseos - São Paulo</p>
-                    <a href="#" class="btn">Reserve</a>
+                    <div class="textoCard">
+                        <p>Feijão Codil</p>
+                        <p>R$ 10,00</p>
+                        <p>X Unidades Disponíveis</p>
+                        <p>Campos Elíseos - São Paulo</p>
+                    </div>
+                    <div class="botaoCard">
+                        <a href="#" class="btn">Reserve</a>
+                    </div>
                 </div>
             </div>
         </section>
