select Pagina do Produto padronizado

--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -175,6 +175,7 @@
         .quantidade input {
             border-radius: 4px;
             height: 30px;
+            width: 44%;
             font-size: 0.8em;
         }
 
