update home rank

--- a/home.html
+++ b/home.html
@@ -188,6 +188,7 @@
             padding-bottom: 20px;
         }
 
+
         footer {
             background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
             color: white;
@@ -199,8 +200,39 @@
             align-items: center;
             justify-content: center;
         }
+
+        .branco {
+            /* display: flex;
+            justify-content: center; */
+            align-items: center;
+            margin: 10px;
+            padding: 0px;
+            width: 750px;
+            height: 40px;
+            background-color: white;
+            border-radius: 50px;
+            text-align: center;
+        }
+
+        .branco img {
+            padding-right: 400px;
+            width: 30px;
+            height: 25px;
+        }
+
+        .rank {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .rank p {
+            /* display: flex;
+            justify-content: center; */
+
+
+        }
     </style>
-    <link rel="stylesheet" href=".>
     <meta charset=" UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -294,12 +326,16 @@
             </div>
         </div>
         <section class="container">
-            <p>RANKING</p>
-            <div class="rank"></div>
-            <div class="branco"><img src="./img/icons/crown.png " alt="" class="coroa"></div>
-            <div class="branco"><img src="./img/icons/crown-1.png" alt="" class="coroa"></div>
-            <div class="branco"><img src="./img/icons/crown-2.png " alt="" class="coroa"></div>
+            <div class="rank">
+
+                <p>RANKING</p>
+
+                <div class="branco"><img src="./img/icons/crown.png " alt="" class="coroa">Arthur Bruno</div>
+                <div class="branco"><img src="./img/icons/crown-1.png" alt="" class="coroa">Gabriel Silva</div>
+                <div class="branco"><img src="./img/icons/crown-2.png " alt="" class="coroa">Kaique Santos</div>
+
             </div>
+
         </section>
     </main>
     <footer>
