Alterações na pagina de Login e Cadastro

--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -103,6 +103,10 @@
         /*Conteúdo*/
         main {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url(img/bannerpho.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
         }
 
         .cards {
@@ -123,6 +127,7 @@
             height: 250px;
             justify-content: center;
             widows: 200px;
+            background-color: white;
         }
 
         .card_2 {
@@ -134,6 +139,7 @@
             padding: 0px 30px;
             padding-bottom: 50px;
             justify-content: center;
+            background-color: white;
         }
 
         .login {
