--- a/perfil.html
+++ b/perfil.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -41,51 +40,50 @@
         </div>
     </header>
     <main>
-            <h1>Nome: Usuário (Vendedor/Comprador)</h1>
-            <div class="tudo">
-                <div class="conteudo">
-                    <section class="cima">
-                        <div class="esquerdo">
-                            <img src="./img/Débora.jpg" alt="foto de perfil do usuario">
-
-                        </div>
-                        <div class="direito">
-                            <div class="t1">
-                                <div class="texto1">
-                                    <P>Dados pessoais</P>
-                                </div>
-                                <div class="textos1">
-                                    <p>Local</p>
-                                    <p>Data de nascimento:</p>
-                                    <p>sexo:</p>
-                                </div>
+        <h1>Débora Nascimento</h1>
+        <div class="tudo">
+            <div class="conteudo">
+                <section class="cima">
+                    <div class="esquerdo">
+                        <img src="img/Débora.jpg" alt="foto de perfil do usuario">
+                    </div>
+                    <div class="direito">
+                        <div class="t1">
+                            <div class="texto1">
+                                <P>Dados pessoais</P>
                             </div>
-                            <div class="t2">
-                                <div class="texto2">
-                                    <p>contato</p>
-                                </div>
-                                <div class="textos2">
-                                    <p>E-mail:</p>
-                                    <p>celular:</p>
-                                </div>
+                            <div class="textos1">
+                                <p>Local</p>
+                                <p>Data de nascimento:</p>
+                                <p>sexo:</p>
                             </div>
                         </div>
-
-                    </section>
-                </div>
-                <h2>Ranking</h2>
-                <section class="baixo">
-                    <div class="posranking">
-                        <div class="numero1">
-                            <p>1</p>
-
-                        </div>
-                        <div class="textoxp">
-                            <p>Pontos XP</p>
+                        <div class="t2">
+                            <div class="texto2">
+                                <p>contato</p>
+                            </div>
+                            <div class="textos2">
+                                <p>E-mail:</p>
+                                <p>celular:</p>
+                            </div>
                         </div>
                     </div>
+
                 </section>
             </div>
+            <h2>Ranking</h2>
+            <section class="baixo">
+                <div class="posranking">
+                    <div class="numero1">
+                        <p>1 </p>
+
+                    </div>
+                    <div class="textoxp">
+                        <p> pontos</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
@@ -94,5 +92,3 @@
 </body>
 
 </html>
-cabecalhoerodape.html
-Exibindo cabecalhoerodape.html…
