--- a/paginaRankingAGORAVAIJESUS.html
+++ b/paginaRankingAGORAVAIJESUS.html
@@ -6,189 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/teste.css">
-    
-    <!-- <style>
-        /* mds se depois disso eu sobreviver eu vou dar um mortal pra trás */
-        /* todo o css header e footer */
-        * {
-            padding: 0;
-            margin: 0;
-            font-family: 'Segoe UI';
-        }
-
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
-
-        .container img {
-            /* logo */
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: 90px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI';
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-            margin-left: 60px;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        .menu a:hover {
-            border-bottom: 1.5px solid white;
-            transition: 0.3s;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI';
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /* ranking */
-
-        td {
-            padding: 0px 45px;
-            margin: auto;
-            text-align: center;
-        }
-
-        table {
-            margin: auto;
-            border-spacing: 15px;
-        }
-
-        .div {
-            width: 1200px;
-            display: flex;
-            justify-content: space-between;
-            margin: auto;
-            padding-top: 40px;
-        }
-
-        .descricao {
-            width: 47%;
-            text-align: justify;
-            border: solid 2px var(--roxo);
-            border-radius: 5px;
-            height: 300px;
-            background-color: white;
-        }
-
-        .ranking {
-            width: 47%;
-            border: solid 2px var(--roxo);
-            border-radius: 5px;
-            background-color: white;
-        }
-
-        p {
-            width: 400px;
-            margin: auto;
-            padding-top: 20px;
-        }
-
-        h3 {
-            text-align: center;
-            padding: 20px;
-            border-bottom: solid 2px var(--roxo);
-            color: var(--roxo);
-            text-transform: uppercase;
-        }
-
-        main {
-            background-image: url(../img/arrumado.png);
-            background-repeat: no-repeat;
-            background-position: top center;
-            background-size: cover;
-            padding-bottom: 40px;
-        }
-
-        .a-botao {
-            color: var(--roxo);
-            border: solid 2px var(--roxo);
-            padding: 20px;
-            background-color: white;
-            text-align: center;
-            text-decoration: none;
-            text-transform: uppercase;
-        }
-
-        .a-botao:hover {
-            background-color: var(--roxo);
-            color: white;
-        }
-
-        .botao {
-            width: 1000px;
-            margin: auto;
-            display: flex;
-            justify-content: flex-end;
-        }
-    </style> -->
-    <title>SMART SALE - HOME</title>
+    <title>SMART SALE - RANKING</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -219,7 +39,6 @@
             </nav>
         </div>
         </div>
-
     </header>
     <main>
         <div class="div">
@@ -320,7 +139,6 @@
     <footer>
         <p>SMART SALE ©2019</p>
     </footer>
-
 </body>
 
 </html>
