--- a/perfil.html
+++ b/perfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/perfil.css">
-    <title>SMART SALE - HOME</title>
+    <title>SMART SALE - PERFIL</title>
 </head>
 
 <body>
@@ -50,25 +50,24 @@
                     <div class="direito">
                         <div class="t1">
                             <div class="texto1">
-                                <P>Dados pessoais</P>
+                                <h2>Dados pessoais</h2>
                             </div>
                             <div class="textos1">
-                                <p>Local</p>
-                                <p>Data de nascimento:</p>
-                                <p>sexo:</p>
+                                <p>Endereço: Rua São Paulo, 500 - SP</p>
+                                <p>Data de nascimento: 25/04/1990</p>
+                                <p>Sexo: Feminino</p>
                             </div>
                         </div>
                         <div class="t2">
                             <div class="texto2">
-                                <p>contato</p>
+                                <h2>Contato</h2>
                             </div>
                             <div class="textos2">
-                                <p>E-mail:</p>
-                                <p>celular:</p>
+                                <p>E-mail:debora.nasc@hotmail.com</p>
+                                <p>celular:(11)94444-5678</p>
                             </div>
                         </div>
                     </div>
-
                 </section>
             </div>
             <h2>Ranking</h2>
